Fixed overlapping side drawer and navbar in mobile version

--- a/frontend/src/commonComponents/navbar/navbar.css
+++ b/frontend/src/commonComponents/navbar/navbar.css
@@ -23,6 +23,7 @@
   background-color: black;
   height: 1px;
   width: 30px;
+  z-index: 300;
 }
 #nav-button:focus,
 #nav-button :active {
