--- a/frontend/src/commonComponents/sidedrawer/sidedrawer.css
+++ b/frontend/src/commonComponents/sidedrawer/sidedrawer.css
@@ -5,11 +5,12 @@
   width: 100%;
   height: 100%;
   position: fixed;
-  top: 2.5em;
+  top: 0;
   left: 0;
   transform: translateX(0);
   transition: all 0.2s ease-in-out;
   z-index: 200;
+  padding-top: 2em;
 }
 .closed-drawer {
   transform: translateX(-120%);
@@ -26,7 +27,7 @@
   justify-content: flex-start;
 }
 .side-drawer-option {
-  width: 80%;
+  width: 100%;
   margin-left: 0.1em;
   margin-top: 1em;
   padding-left: 0.5em;
@@ -49,4 +50,9 @@
 .navlink:hover {
   text-decoration: none;
   color: black;
+}
+@media (min-width: 620px) {
+  .drawer {
+    width: 16em;
+  }
 }
